templates/bootstrap/css/style.css
/* ... */
.comment_left {
	text-align:center;
}

.comment_voting {
	min-width:90px;
	margin:5px 5px 10px 0;
}

.dropdown-menu li {
    border-bottom: none;
    margin-bottom: 0px;
}

.child-comment{
	margin-left:30px;
}

.avatar {
	max-width:64px;
	max-height:64px;
}

.comment-data{
	margin-bottom: 9px;
}

.comment-author {
    font-size: 12px;
    font-weight: bold;
    margin-right: 6px;
}

.comment-date {
    border-left: 1px solid #EFEFEF;
    color: #888888;
    font-size: 10px;
    padding: 0 6px;
    text-transform: uppercase;
}

.comment-hide {
    border-left: 1px solid #EFEFEF;
    color: #888888;
    font-size: 10px;
    padding: 0 6px;
    text-transform: uppercase;
}

.comment-reply {
    border-left: 1px solid #EFEFEF;
    color: #888888;
    font-size: 10px;
    padding: 0 6px;
    text-transform: uppercase;
}

.comment-hover {}

.comment-wrapper {
position: relative;
}

.commenttools {
padding: 0px 10px;
float:right;
}

.comment-form {
width:90%;
}

/********************* SIDEBAR ********************/
.search-form  {
margin:0 0 10px 0;
}
.search-form .col-md-8,.search-form .col-md-4 {
padding:0;
}
.headline {
font-size:1em;
margin:0 0 10px 0;
}
.sectiontitle {
font-size:1.4em;
padding:0 0 4px 0;
border-bottom:1px solid #ddd;
}
.boxcontent {
margin-bottom:15px;
}
#aboutcontent {
margin-bottom:20px;
}
#navlist{
margin:0 0 10px 0;
padding:0 0 0 20px;
}
.sidebar-stories {
margin:0 0 20px 0;
padding:0 5px 0 5px;
list-style-type:none;
}
.sidebar-stories  li{
	font-size:0.8em;
	line-height:0.8em;
	padding:2px 0 8px 0;
	border-bottom:1px dotted #eee;
}
.sidebar-vote-number {
font-weight:bold;
line-height:30px;
padding:2px 6px;
margin:0 8px 0 0;
background:#fff;
border: 1px solid #ccc;
border: 1px solid rgba(0, 0, 0, 0.15);
-webkit-border-radius: 4px;
 -moz-border-radius: 4px;
	  border-radius: 4px;
}
.sidebar-article {

}

#sidebar-comments{
margin:0 0 20px 0;
font-size:0.8em;
}
.tagformat{
margin:0px 0 20px 0;
padding:0 0 0 5px;
}
/**************** SIMPLE MESSAGING MODULE ******************/
.simple_messaging_wrapper {
	margin-bottom:60px;
}

/**************** USER PROFILE ******************/
#profiletabs {
margin-bottom:20px;
}
.profile_settings_save {
margin:5px 15px 10px 15px;
}
.avatar_thumb {
width: 100px;
float: left;
margin-right: 10px;
padding: 0;
position: relative;
overflow: hidden;
}
.edit-avatar {
position: absolute;
bottom: 0;
display: none;
margin: 4px;
width:90%;
}
.avatar_thumb:hover .edit-avatar {
display: block;
}
.user_navigation_left {

}
.user_navigation_right {

}
.user_search {

}
.user_followers {
margin-top:10px;
}
.checked {
clear:both;
}
.checkbox {
float:left;
margin-right:6px;
}

.follow {
padding:3px 0 5px 5px;
margin:0 0 2px;
line-height:18px;
}
.follow a {color:#fff;}

.user_settings {
margin:20px 0 0 0;
padding:8px;
}
.usercategory_outer{
clear:both;
}
.usercategory_checkbox{
float:left;
}
.usercategory_name{
float:left;
margin:0 0 0 6px;
}
.user_settings_save {
clear:both;
margin:30px 0 15px 0;
}

#personal_info {
float:left;
}
#stats {
float:left;
}
#friends {
float:left;
}
#groups {
float:left;
}
legend {
margin-bottom: 15px;
}

.table_title {
    background-color: #FBFBFB;
    background-image: -moz-linear-gradient(center top , #FCFCFC, #DDDDDD);
    background-repeat: repeat-x;
    border-radius: 3px 3px 3px 3px;
    position: relative;
    z-index: 2;
}
.user_comment_history {
	margin:0 0 15px 0;
}
.user_comment_story_author_avatar, .user_comment_comment_author_avatar {
	width:16px;
	height:16px;
}
.user_comment_story_title {
	font-weight:bold;
}
.site_languages {
	text-transform: capitalize;
}

/**************** SUBMIT ******************/
.submit_step_1_left {
float:left;
width:60%;
min-width:240px;
}
.submit_right_sidebar {
float:left;
width:40%;
min-width:240px;
}

#url {}
#title {}
#tags {}
#summarytext {}
#bodytext {}

.help-block, .help-inline {
font-size:0.8em;
}

.field-description {}

/**************** EDIT SUBMISSION ******************/

.notify_option_list {
	margin:0;
	padding: 0 0 2px 9px;
	list-style-type:none;
}

/**************** FOOTER ******************/
#footer {
margin-bottom:20px;
}

/*************** GROUPS ******************/
.group_explain {
padding-top:0;
}

.create_group {
float:left;
width:48%;
margin:15px 0 0 0;
border-right:1px solid #ddd;
}
.search_groups {
float:left;
text-align:right;
width:48%;
margin:15px 0 0 0;
}
.group_title {
font-weight:bold;
font-size:1.2em;
}
.group_created_by {
font-size:0.85em;
}
.group_created_on {
font-size:0.85em;
}
.group_members {
font-size:0.85em;
}
.group_description {

}

/************** LOGIN PAGE ***************/
.login-left, .login-middle, .login-right {
	padding:10px 30px;
}

/************** LOGIN MODAL ***************/
#loginModal .modal-dialog {
	width:350px;
}
.login_modal_username { }
.login_modal_password { }
.login_modal_remember {
margin:5px 5px 10px 5px;
}
.login_modal_remember_checkbox {
float:left;
display:inline;
}
.login_modal_remember_label {
float:left;
display:inline;
padding:4px 4px 0 2px;
font-size:11px;
}
.login_modal_login { }
#login_modal_spacer{
	padding:0;
	margin-top:8px;
	margin-bottom:8px;
}
.login_modal_forgot { }

/************** REGISTER ***************/
.reg_submit { margin-top:10px; }
#reg_usernamecheckitvalue {}
#reg_emailcheckitvalue {}

/* for ajax loader */
.loader{
background-image:url(../img/ajax-loader.gif);
background-repeat:no-repeat;
}
/* for sortable table header in top user page */
table.tablesorter thead tr .header {
	background-image: url(../img/bg.gif);
	background-repeat: no-repeat;
	background-position: center right;
	cursor: pointer;
}

table.tablesorter thead tr .headerSortUp {
	background-image: url(../img/asc.gif);
}
table.tablesorter thead tr .headerSortDown {
	background-image: url(../img/desc.gif);
}

/************ FILE UPLOAD *************/
.btn.btn-file {
  overflow: hidden;
  position: relative;
  vertical-align: middle;
}
/* ... */

